    - default: false
    - Will bankrupt towns pay their nation tax?
    - If false towns that are bankrupt will not pay any nation tax and will leave their nation.
    - If true the town will go into debt up until their debt cap is reached.
    - True is recommended when using a Siege War style war/conquering system, otherwise conquered towns will be able to leave the nation simply by not paying the nation tax.
    - False is recommended otherwise so that nations are not using abandoned towns to gather taxes.
  - New Config Option: economy.bankruptcy.nation_tax.kick_towns_that_reach_debt_cap
    - default: false
    - If a town can no longer pay their nation tax with debt because they have reach their debtcap, are they kicked from the nation?
  - Language files bumped to 0.86.
  - Small refactor of the cleanup() used in the sql_schema, fixes a bit of spam saying Towny couldn't drop a column that doesn't exist.
0.96.2.20:
  - Fix firing multiple cost confirmations when setting a plot type to a plot group.
    - Closes #4127.
  - Alter farm and wilds plots to have resident/friend build & destroy on automatically when the plot type is set.
    - As opposed to having those plot types mimic the town/resident perm line. 
  - Fix missing switch test, solving problem with unresearched slimefun items allowing bypass of switch protections.
    - Closes #4065.
  - Fix trying to load non-existant residents in the friendslist.
  - Remove unused plotManagementRevertSpeed from sql and townyworld.
  - Fix &k being allowed to be used in various things like titles/surnames/tags.
    - Closes #4270.
  - Remove unused & long-deprecated NameValidation settings from TownySettings.
  - Rearrange title and surname length test to occur after we've filtered out any characters we won't allow.
  - API: Add CombatUtil.isSameTown(Resident, Resident) and CombatUtil.isNameNation(Resident, Resident).
  - Clean up title and surname setting for towns and nations.