@@ -1392,6 +1392,11 @@ public class TownySettings {
 		return getDouble(ConfigNodes.ECO_PRICE_PURCHASED_BONUS_TOWNBLOCK_INCREASE);
 	}
 	
+	public static double getPurchasedBonusBlocksMaxPrice() {
+		
+		return getDouble(ConfigNodes.ECO_PRICE_PURCHASED_BONUS_TOWNBLOCKS_MAXIMUM);
+	}
+	
 	public static boolean isTownSpawnPaidToTown() {
 		
 		return getBoolean(ConfigNodes.ECO_PRICE_TOWN_SPAWN_PAID_TO_TOWN);
